Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29474

main.lock_sync fails with timeout

    XMLWordPrintable

Details

    • Not for Release Notes
    • Test case fix, no release note needed.
    • Q3/2025 Maintenance

    Description

      https://buildbot.mariadb.org/#/builders/168/builds/14289

      main.lock_sync 'innodb'                  w6 [ fail ]  timeout after 480 seconds
              Test ended at 2022-09-06 08:22:41
      Test case timeout after 480 seconds
      == /buildbot/amd64-ubuntu-1804-clang10-asan/build/mysql-test/var/6/log/lock_sync.log == 
      disconnect con1;
      disconnect con2;
      DROP TABLES t1, t2;
      #
      # MDEV-28567 Assertion `0' in open_tables upon function-related operation
      #
      CREATE TABLE t1 (a INT);
      CREATE TABLE t2 (b INT);
      CREATE TRIGGER tr1 BEFORE INSERT ON t1 FOR EACH ROW UPDATE t2 SET b = 0;
      CREATE TRIGGER tr2 BEFORE INSERT ON t2 FOR EACH ROW UPDATE t1 SET a = 6;
      CREATE VIEW v1 AS SELECT * FROM t1;
      SET AUTOCOMMIT=OFF;
      SELECT * FROM t1;
      a
      DROP TRIGGER tr1;
      INSERT INTO t2 SELECT * FROM t2;
      SELECT f() FROM t2;
      ERROR 42000: FUNCTION test.f does not exist
      set debug_sync= 'after_open_table_mdl_shared signal s1';
      ALTER VIEW v1 AS SELECT f() FROM t1;
       == /buildbot/amd64-ubuntu-1804-clang10-asan/build/mysql-test/var/6/tmp/analyze-timeout-mysqld.1.err ==
      mysqltest: Could not open connection 'default' after 500 attempts: 2002 Can't connect to local server through socket '/buildbot/amd64-ubuntu-1804-clang10-asan/build/mysql-test/var/tm' (111)
      

      Attachments

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              midenok Aleksey Midenkov
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 4.5h
                  1d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.