MDEV-29474 main.lock_sync fails with timeout

There was race condition in MDEV-28567 test case where
"DROP TRIGGER tr1" was too slow to acquire test/t1 (MDL_SHARED_NO_WRITE).
"INSERT INTO t2 SELECT * FROM t2" acquired it and since there is
autocommit=off it was held forever:

T@46   : dispatch_command: query: INSERT INTO t2 SELECT * FROM t2
T@46   : MDL_context::acquire_lock: mdl: Seized:   test/t2 (MDL_SHARED_WRITE)
T@46   : MDL_context::acquire_lock: mdl: Seized:   test/t2 (MDL_SHARED_WRITE)
T@46   : MDL_context::acquire_lock: mdl: Seized:   test/t1 (MDL_SHARED_WRITE)
T@48   : dispatch_command: query: DROP TRIGGER tr1
T@48   : MDL_context::acquire_lock: mdl: Seized:   test/tr1 (MDL_EXCLUSIVE)
T@48   : MDL_context::acquire_lock: mdl: Waiting:  test/t1 (MDL_SHARED_NO_WRITE)

To avoid this case the patch adds MDL type + table name sync point, so
INSERT starts only after DROP TRIGGER seized MDL_SHARED_NO_WRITE for t1.